[gd_scene load_steps=2 format=3 uid="uid://cj3rs7apvahso"]

[ext_resource type="Script" path="res://scenes/menu/menu.gd" id="1_t57w1"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t57w1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101167, 0.177082, 0.18611, 1)

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = 5.0
offset_right = -40.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="PlayButton" type="Button" parent="Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
text = "Play"

[node name="QuitButton" type="Button" parent="Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Buttons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
